# ReboSlime

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  reboslime.py  run.bat
libs/quat_compute/: quat.py
libs/rebocap/: Readme.md  main.py  rebocap_ws_sdk.py  rebocap_ws_sdk_example.py  rebocap_ws_sdk_ext.py
libs/rebocap/py310/: rebocap_ws_sdk_ext.py  rebocap_ws_sdk_ext.pyd
libs/rebocap/py37/: rebocap_ws_sdk_ext.pyd
libs/rebocap/py38/: rebocap_ws_sdk_ext.pyd
